--- a/OpenAI-API/Simple.OAI.Lib/Simple.OAI.Lib.csproj
+++ b/OpenAI-API/Simple.OAI.Lib/Simple.OAI.Lib.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <Nullable>enable</Nullable>
-	  <LangVersion>10</LangVersion>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<Nullable>disable</Nullable>
+		<LangVersion>10</LangVersion>
+	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Simple.API" Version="1.6.3" />
